# aula_19_bootcamp_python

./: .test.db  Dockerfile  README.md  database.py  exempoplo 1.py  main.py  pyproject.toml  schema.py
