[tool.poetry]
name = "aula-19-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Patrick Perez <patrickperez1698@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.11"}
sqlalchemy = "^2.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
